@@ -21,6 +21,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 
 @Configuration
@@ -40,6 +41,23 @@ public class SecurityConfig {
     @Value("${app.security.pepper}")
     private String PEPPERSECRETKEY;
 
+    // Modern Approach
+
+//    private final UserEntityService userEntityService;
+//    private final JwtFilter jwtFilter;
+//    private final String pepperSecretKey;
+//
+//    @Autowired
+//    public SecurityConfig(
+//            UserEntityService userEntityService,
+//            JwtFilter jwtFilter,
+//            @Value("${app.security.pepper}") String pepperSecretKey
+//    ) {
+//        this.userEntityService = userEntityService;
+//        this.jwtFilter = jwtFilter;
+//        this.pepperSecretKey = pepperSecretKey;
+//    }
+
     @Bean
     public PasswordEncoder passwordEncoder(){
         return new BCryptPasswordEncoder(){
@@ -58,19 +76,19 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception{
         httpSecurity
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
+//                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth ->
-                        auth
+                .authorizeHttpRequests(auth -> auth
                                 // Publicly accessible
                                 .requestMatchers("/auth/login", "/auth/register").permitAll()
                                 // Requires a token
                                 .requestMatchers("/auth/logout").authenticated()
                                 .anyRequest().authenticated()
-                        );
-        httpSecurity.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+                        )
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return httpSecurity.build();
     }
@@ -82,8 +100,9 @@ public class SecurityConfig {
 
     @Bean
     public DaoAuthenticationProvider daoAuthenticationProvider(){
-        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
-        authenticationProvider.setUserDetailsService(userEntityService);
+        //DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider()
+        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider(userEntityService);
+        //authenticationProvider.setUserDetailsService(userEntityService);
         authenticationProvider.setPasswordEncoder(passwordEncoder());
         return authenticationProvider;
     }
@@ -91,9 +110,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        // Allow credentials (cookies, authorization headers)
+        configuration.setAllowCredentials(true);
+        // How long the browser should cache preflight response (in seconds)
+        configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
